--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
     <!--intro/informationstekst-->
     <div class="intro">
         <h2>Brand dit håndværk med storytelling</h2>
-            <p>Hos Story Media har vi fokus på storytelling og det er der en god grund til. Mennesker elsker en god historie, der aktiverer deres følelsesregister og forestillingsevner.</p>
+            <p>Hos Story Media har vi fokus på storytelling og det er der en god grund til. Mennesker elsker en god historie, der aktiverer deres følelsesregister og forestillingsevner.
+            </p>
 
         <h3>Et studie viser, at kun 5% husker fakta og statistik, mens hele <span class="orange">60% husker en fortælling.</span></h3>
 
@@ -110,6 +111,7 @@
             <img src="img/forside-ler.png" alt="Person der arbejder med ler">
         </div>
         <div class="content-txt2">
+            <h4>Unik Branding</h4>
             <h2>Storytelling</h2>
             <p>Vi er specialister i storytelling.</p>  
 
@@ -123,6 +125,7 @@
 
     <section class="text-img-section">
         <div class="content-txt">
+            <h4>professionelt resultat</h4>
             <h2>branding proces</h2>
             <p>Vi gør os umage. </p>  
 
@@ -138,17 +141,18 @@
     </section>
 
     <section class="text-img-section">
-        <div class="content-foto2">
-            <img src="img/forside-blomst.png" alt="">
+        <div class="content-foto2 special">
+            <img src="img/forside-blomst.png" alt="blomsterbinding">
         </div>
         <div class="content-txt2">
+            <h4>Løft dit brand til nye højder</h4>
             <h2 class="vi-tilbyder">Vi tilbyder</h2>
-            <h3>Visuel identitet</h3>
-            <h3>Hjemmeside</h3>
-            <h3>Visitkort</h3>
-            <h3>Bannere</h3>
-            <h3>Plakater</h3>
-            <h3 class="hero-gap-til-knap">Logo</h3>
+            <p>Visuel identitet</p>
+            <p>Grafisk design</p>
+            <p>Hjemmeside</p>
+            <p>Bannere</p>
+            <p>Plakater</p>
+            <p class="hero-gap-til-knap">Logo</p>
 
             <a class="knap" href="ydelser.html">Gå til ydelser</a>
         </div>
@@ -156,7 +160,8 @@
 
     <section class="text-img-section">
         <div class="content-txt">
-            <h2>Vi er story media</h2>
+            <h4>eksperter i branding af din virksomhed</h4>
+            <h2>story media</h2>
             <p>Når du bestiller en ydelse gennem Story Media er det Elisabeth og Maja, du kommer til at møde. </p>  
 
             <p>Vi er begge uddannet multimediedesignere og er efter uddannelsen gået i forskellige retninger. </p>
