--- a/kontakt.html
+++ b/kontakt.html
@@ -43,7 +43,8 @@
        <div class="hero-container">    
             <article class="hero-tekst slideind-venstre">
                 <h1>Skal vi tage en snak?</h1>
-                <p>Du behøver ikke være afklaret, inden vi snakker sammen. Vi hjælper dig med at analysere dine behov.</p>
+                <p>Du behøver ikke være afklaret om dit behov for branding, inden vi snakker sammen. </p>
+                <p>Vi hjælper dig med at sætte ord på din unikke virksomhed og hvad der kan styrke dit brand.</p>
                 <div class="text">
                 <p>E-mail: <a href="mailto:info@storymedia.com" class="text">info@storymedia.com</a></p>
                 <p>Telefon: <a href="tel:+4599999999" class="text">+45 99 99 99 99</a></p>
@@ -68,7 +69,7 @@
             <section class="kontaktinformation">
                 <h1>Information</h1>
                 <p>Du er altid mere end velkommen til at kontakte os! </p>
-                <p>Uanset om du er startet som iværksætter eller blot har tanker om din egen virksomhed, så hjælper vi dig gerne med at blive skarpere på markedsføring. Lad os tage en snak om dine ønsker og behov.</p>
+                <p>Uanset om du er startet som iværksætter eller blot har tanker om din egen virksomhed, så hjælper vi dig gerne med at blive skarpere på markedsføring. Lad os tage en snak om dine ønsker og behov. </p>
                 <p>Vi bestræber os på at svare inden for en arbejdsdag, uanset om du kontakter os via mobil, e-mail eller sociale medier.</p>
                 <p>Vi glæder os til at høre fra dig!</p>
             </section>
