--- a/om-story-media.html
+++ b/om-story-media.html
@@ -43,7 +43,7 @@
         <!--hero-område-->
        <div class="hero-container">    
         <article class="hero-tekst slideind-venstre">
-            <h1>Vores unikke historie</h1>
+            <h1>Vi er Kreativt iværksætteri</h1>
             <p>Hos Story Media brænder vi for digitalt håndværk. Vi er passionerede omkring vores arbejde med branding af din kreative virksomhed.</p>
             <p class="hero-gap-til-knap">Her får du vores unikke historie.</p>
             <a href="kontakt.html" class="knap">Kontakt os</a>
@@ -70,10 +70,16 @@
             <div>
                 <img src="img/Elisabeth.png" alt="Grundlægger af Story Media, Elisabeth">
                 <h2>Elisabeth</h2>
+                <h4>Design | Foto | video </h4>
+                <p>e-mail: elisabeth@storymedia.dk</p>
+                <p>dir.tlf: +45 99 99 99 01</p>
             </div>
             <div>
                 <img src="img/maja.png" alt="Grundlægger af Story Media, Maja">
                 <h2>Maja</h2>
+                <h4>webudvikling | SEO </h4>
+                <p>e-mail: maja@storymedia.dk</p>
+                <p>dir.tlf: +45 99 99 99 02</p>
             </div>
         </div>
             <img src="img/omos-streg.png" alt="stiblet linje der pynter siden" class="streg-fyld">
@@ -83,7 +89,7 @@
     <section class="info-os">
         <h2>Hvem er vi</h2>
         <p>Vi er Elisabeth og Maja - begge vokset op med fødderne i den jydske muld. Hvis du leder efter et jordnært multimediebureau, læser du med det helt rigtige sted. </p>
-        <p>Som børn er flest har vi begge haft mange kreative interesser op igennem barndommen. Kreativiteten har holdt ved og <a href="index.html" class="internlinks">Story Media</a> er i dag et resultat af ønsket om at holde fast i en hverdag med masser af kreativitet og ekspertviden indenfor hjemmesidedesign.</p>
+        <p>Som børn er flest, har vi begge haft mange kreative interesser op igennem barndommen. Kreativiteten har holdt ved og <a href="index.html" class="internlinks">Story Media</a> er i dag et resultat af ønsket om at holde fast i en hverdag med masser af kreativitet og ekspertviden indenfor hjemmesidedesign.</p>
         <p>Der skulle gå nogle år, før vi mødtes på multimediedesigneruddannelsen. Vi har andre uddannelser med i bagagen, som har givet os et solidt fundament at bygge på og kompetencer indenfor andre områder, som i dag er et plus i vores hverdag med egen virksomhed. </p>
     </section>
 
@@ -93,7 +99,7 @@
         <article class="iveark-os-txt">
             <h2>iværksættere & kreativt håndværk</h2>
             <p>Vi kender begge til skaberlysten og til ønsket om friheden til at tilrettelægge indhold og rammer omkring vores arbejde. </p>
-            <p>I en iværksætteranalyse fra organisationen Danske Iværksættere svarer 62%,, at skaberlysten er den primære inspiration til at blive iværksætter og 69% svarer at friheden til at tilrettelægge indholdet i arbejdet er afgørende for beslutningen.</p>
+            <p>I en iværksætteranalyse fra organisationen Danske Iværksættere svarer 62%,, at skaberlysten er den primære inspiration til at blive iværksætter og 69% svarer at friheden til at tilrettelægge indholdet i arbejdet er afgørende for beslutningen. </p>
             <p>Det falder fuldstændig i tråd med vores egne livsstilsværdier og derfor mener vi, at netop målgruppen “iværksættere med et kreativt håndværk” er de kunder, hvor vi forstår branding behovet og kan gøre en forskel i rejsen med deres virksomhed.</p>
             <p>Vi har fundet vores kald i den digitale kreative verden. Og det var på et online studie ved IBA Erhvervsakademi i Kolding, at vores fælles rejse startede.</p>
         </article>
@@ -105,15 +111,16 @@
         <img src="img/omos-flyver.png" alt="illustration af vi flyver i hver vores retning">
             <div class="beige-box">
                 <div class="beige-box1">
-                    <h2>Specialisering</h2>
+                    <h4>Specialisering</h4>
+                    <h3>Design, Foto & Video </h3>
                     <p>Efter multimediedesign uddannelsen landede Elisabeth et design job hos Grobowski, et passioneret design- og kommunikations bureau, der med krøllede hjerner og dedikation inspirerer mennesker.</p>
                     <p>Udover det nye spændende job har Elisabeth fokuseret på en af hendes passioner, nemlig fotografering. Hun har taget kurser i foto- og videografi for at udvikle hendes evner. </p>
                 </div>
                 <div class="beige-box2">
-                    <h2>Specialisering</h2>
-                    <p>Multimedieuddannelsen var for Maja springbrættet til en bachelor i webudvikling. </p>
-                    <p>Hun har derefter arbejdet freelance med kodning og design af hjemmesider til iværksættere fra mange forskellige brancher. </p>
-                    <p>Den faglige læring har derfor været kombineret med viden omkring iværksætterens behov for branding. </p>
+                    <h4>Specialisering</h4>
+                    <h3>Webudvikling & SEO</h3>
+                    <p>Multimedieuddannelsen var for Maja springbrættet til en bachelor i webudvikling. Sideløbende med studiet steg interessen for SEO, og det er blevet til flere kurser indenfor emnet. </p>
+                    <p>Hun har derefter arbejdet freelance med kodning, design og SEO af hjemmesider til iværksættere fra mange forskellige brancher. </p>
                 </div>
             </div>
     </section>
