--- a/ydelser.html
+++ b/ydelser.html
@@ -132,6 +132,7 @@
             <h2>Vi designer hjemmesider, der sælger</h2>
             <p>Din hjemmeside er dit ansigt udad til kunden. Den skal fange din kundes opmærksomhed gennem design og din unikke fortælling om din virksomhed.</p>
             <p>Du har få sekunder på din hjemmeside til at fange din kundes interesse. Derfor skal udtrykket og følelsen for din passion være spot on fra første øjekast. Vi hjælper din virksomhed med at skille sig ud, blive bemærket og vokse til at blive det unikke brand du drømmer om.</p>
+            <p>Du overtager en hjemmeside der puster liv i dit brand og er nem at vedligeholde.</p>
         </article>
 
 
@@ -205,8 +206,8 @@
         <div  class="specifikke">
             <article>
                 <h4 class="overoverskrift">Garanteret kreativitet</h4>
-                <h2>Den specifikke</h2>
-                <p>Har du kun brug for hjælp til specifikke opgaver, er det også en mulighed. Vi har listet nogle af de løsninger op, som vi ved, der er brug for. </p>
+                <h2>Den specifikke designløsning</h2>
+                <p>Har du kun brug for hjælp til specifikke opgaver indenfor grafisk design, er det også en mulighed. Vi har listet nogle af de løsninger op, som vi ved, der er brug for.  </p>
                 <p class="specafstand">Listen er ikke begrænset - du er velkommen til at kontakte os med lige præcis dit behov.</p>
                 <ul class="specafstand">
                     <li><p>Logo</p></li>
