billede af os tilføjet

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 
             <a class="knap" href="om-story-media.html">Læs vores historie</a>
         </div>
-        <div class="logo-foto">
-            <img src="img/Logo-ikon.png" alt="Story Medias logo ikon">
+        <div class="content-foto">
+            <img src="img/high-five-forside.png" alt="Elisabeth og maja high five">
         </div>
     </section>
 
