--- a/om-story-media.html
+++ b/om-story-media.html
@@ -125,6 +125,10 @@
             </div>
     </section>
 
+    <div class="fotoafos">
+    <img src="img/high-five-omos.png" alt="Elisabeth og Maja high fiveer hinanden">
+    </div>
+
     <div class="startup-omos">
         <img src="img/omos-streg1.png" alt="stiblet linje der pynter siden" class="stregen-fyld">
         <img src="img/Start-up.png" alt="*Start up*" class="startup-os-img">
