Tilføjet nye billeder til BP

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -84,7 +84,7 @@
                 </ul>
             </section>
             <div class="branding-img-bokse-venstre">
-                <img src="img/brandin proces-unik.png" alt="Kvinde med ipad">
+                <img src="img/BP-mobil-billede.png" alt="Mobiltelefon på notesbog">
             </div>
         </div>
 
@@ -103,7 +103,7 @@
                 </ul>
             </section>
             <div class="branding-img-bokse-hojre">
-                <img src="img/brandingproces-kunde.png" alt="Finger peger på en computerskærm">
+                <img src="img/BP-kundebillede.png" alt="Finger peger på en computerskærm">
             </div>
         </div>
 
@@ -124,7 +124,7 @@
                 </ul>
             </section>
             <div class="branding-img-bokse-venstre">
-                <img src="img/brandingproces-identitet.png" alt="Postkort på et bord">
+                <img src="img/BP-devices.png" alt="Postkort på et bord">
             </div>
         </div>
 
