Responsivitet på den nye storytellingside

--- a/Storytellingnymaaske.html
+++ b/Storytellingnymaaske.html
@@ -162,7 +162,7 @@
 
         <section class="case-wrap-venstre">
             <div class="below-box">
-            <img class="bill-boks-venstre3" src="img/Wooddesigntræoverflade.png" alt="Billede af træbark">
+            <img class="bill-boks-venstre" src="img/Wooddesigntræoverflade.png" alt="Billede af træbark">
             <article>
                 <h2>Tilbage til naturen</h2>
                 <p>For Mads er der en masse følelser forbundet med hans håndværk. Barndomsminderne er en stor del af det, desuden hans store glæde for naturen og ikke mindst hans passion for at arbejde med træ. </p>
