--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </section>
 
     <section class="text-img-section">
-        <div class="content-foto2 special">
+        <div class="content-foto2">
             <img src="img/forside-blomst.png" alt="blomsterbinding">
         </div>
         <div class="content-txt2">
