--- a/ydelser.html
+++ b/ydelser.html
@@ -222,7 +222,7 @@
                 </ul>
                 <a class="knap knap-tablet" href="kontakt.html">Kontakt os for pris</a>
             </article>
-            <img class="spec-img" src="img/Stearinlys.png" alt="Billede af lys">
+            <img class="spec-img" src="img/Denspecifikke.png" alt="Billede af lys">
         </div>
 
 
