--- a/branding-proces.html
+++ b/branding-proces.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/mediaquery.css">
-    <title>Story Media | Branding proces one on one </title>
+    <title>Story Media | Professionel branding proces </title>
 </head>
 <body class="BGbranding">
 
