--- a/ydelser.html
+++ b/ydelser.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/mediaquery.css">
-    <title>Story Media | Services | Ydelser</title>
+    <title>Story Media | Ydelser | Grafisk design der løfter din virksomhed</title>
     
 </head>
 <body class="BGandre">
