--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!-- Branding video-->
     <div class="brandingvideo">
-        <h4>Det handler ikke om os</h4>
+        <p class="forh1">Det handler ikke om os</p>
         <h2>Du er i centrum</h2>
         
         <div class="video-container">
@@ -111,7 +111,7 @@
             <img src="img/forside-ler.png" alt="Person der arbejder med ler">
         </div>
         <div class="content-txt2">
-            <h4>Unik Branding</h4>
+            <p class="forh1">Unik Branding</p>
             <h2>Storytelling</h2>
             <p>Vi er specialister i storytelling.</p>  
 
@@ -125,7 +125,7 @@
 
     <section class="text-img-section">
         <div class="content-txt">
-            <h4>professionelt resultat</h4>
+            <p class="forh1">professionelt resultat</p>
             <h2>branding proces</h2>
             <p>Vi gør os umage. </p>  
 
@@ -145,7 +145,7 @@
             <img src="img/forside-blomst.png" alt="blomsterbinding">
         </div>
         <div class="content-txt2">
-            <h4>Løft dit brand til nye højder</h4>
+            <p class="forh1">Løft dit brand til nye højder</p>
             <h2 class="vi-tilbyder">Vi tilbyder</h2>
             <p>Visuel identitet</p>
             <p>Grafisk design</p>
@@ -160,7 +160,7 @@
 
     <section class="text-img-section">
         <div class="content-txt">
-            <h4>eksperter i branding af din virksomhed</h4>
+            <p class="forh1">eksperter i branding af din virksomhed</p>
             <h2>story media</h2>
             <p>Når du bestiller en ydelse gennem Story Media er det Elisabeth og Maja, du kommer til at møde. </p>  
 
