--- a/om-story-media.html
+++ b/om-story-media.html
@@ -70,14 +70,14 @@
             <div>
                 <img src="img/Elisabeth.png" alt="Grundlægger af Story Media, Elisabeth">
                 <h2>Elisabeth</h2>
-                <h4>Design | Foto | video </h4>
+                <p class="forh1">Design | Foto | video </p>
                 <p>e-mail: elisabeth@storymedia.dk</p>
                 <p>dir.tlf: +45 99 99 99 01</p>
             </div>
             <div>
                 <img src="img/maja.png" alt="Grundlægger af Story Media, Maja">
                 <h2>Maja</h2>
-                <h4>webudvikling | SEO </h4>
+                <p class="forh1">webudvikling | SEO </p>
                 <p>e-mail: maja@storymedia.dk</p>
                 <p>dir.tlf: +45 99 99 99 02</p>
             </div>
@@ -111,13 +111,13 @@
         <img src="img/omos-flyver.png" alt="illustration af vi flyver i hver vores retning">
             <div class="beige-box">
                 <div class="beige-box1">
-                    <h4>Specialisering</h4>
+                    <p class="forh1">Specialisering</p>
                     <h3>Design, Foto & Video </h3>
                     <p>Efter multimediedesign uddannelsen landede Elisabeth et design job hos Grobowski, et passioneret design- og kommunikations bureau, der med krøllede hjerner og dedikation inspirerer mennesker.</p>
                     <p>Udover det nye spændende job har Elisabeth fokuseret på en af hendes passioner, nemlig fotografering. Hun har taget kurser i foto- og videografi for at udvikle hendes evner. </p>
                 </div>
                 <div class="beige-box2">
-                    <h4>Specialisering</h4>
+                    <p class="forh1">Specialisering</p>
                     <h3>Webudvikling & SEO</h3>
                     <p>Multimedieuddannelsen var for Maja springbrættet til en bachelor i webudvikling. Sideløbende med studiet steg interessen for SEO, og det er blevet til flere kurser indenfor emnet. </p>
                     <p>Hun har derefter arbejdet freelance med kodning, design og SEO af hjemmesider til iværksættere fra mange forskellige brancher. </p>
