--- a/ydelser.html
+++ b/ydelser.html
@@ -75,7 +75,7 @@
             <img class="stark-img" src="img/Visuelidentitet.png" alt="Billede af postkort">
             
             <article>
-                <h4 class="overoverskrift">Stå stærkere</h4>
+                <p class="forh1 overoverskrift">Stå stærkere</p>
                 <h2>Din visuelle identitet</h2>
                 <p>Din visuelle identitet er alt det, du har brug for, for at komme i gang med dit brand.</p>
                 <p>Vi skaber en sammenhængende og unik fortælling om dit brand med fokus på enkle og effektive elementer.</p>
@@ -205,7 +205,7 @@
 
         <div  class="specifikke">
             <article>
-                <h4 class="overoverskrift">Garanteret kreativitet</h4>
+                <p class="forh1 overoverskrift">Garanteret kreativitet</p>
                 <h2>Den specifikke designløsning</h2>
                 <p>Har du kun brug for hjælp til specifikke opgaver indenfor grafisk design, er det også en mulighed. Vi har listet nogle af de løsninger op, som vi ved, der er brug for.  </p>
                 <p class="specafstand">Listen er ikke begrænset - du er velkommen til at kontakte os med lige præcis dit behov.</p>
