--- a/om-story-media.html
+++ b/om-story-media.html
@@ -71,15 +71,15 @@
                 <img src="img/Elisabeth.png" alt="Grundlægger af Story Media, Elisabeth">
                 <h2>Elisabeth</h2>
                 <p class="forh1">Design | Foto | video </p>
-                <p>e-mail: elisabeth@storymedia.dk</p>
-                <p>dir.tlf: +45 99 99 99 01</p>
+                <a href="mailto:elisabeth@storymedia.com">e-mail: elisabeth@storymedia.com</a>
+                <a href="tel:+4599999901">dir. tlf. +45 99 99 99 01</a>
             </div>
             <div>
                 <img src="img/maja.png" alt="Grundlægger af Story Media, Maja">
                 <h2>Maja</h2>
                 <p class="forh1">webudvikling | SEO </p>
-                <p>e-mail: maja@storymedia.dk</p>
-                <p>dir.tlf: +45 99 99 99 02</p>
+                <a href="mailto:maja@storymedia.com">e-mail: maja@storymedia.com</a>
+                <a href="tel:+4599999901">dir. tlf. +45 99 99 99 02</a>
             </div>
         </div>
             <img src="img/omos-streg.png" alt="stiblet linje der pynter siden" class="streg-fyld">
